--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -176,16 +176,29 @@ p.client_img_container > img {
 
 .contact_container {
     width: 200px;
+    text-align: center;
 }
 
 .contact_container > .photo {
-    height: 200px;
-    width: 170px;
+    height: 150px;
+    width: 150px;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: scroll;
     background-size: cover;
     overflow: hidden;
+    border-radius: 100%;
+    margin-bottom: 3rem;
+    margin-left: 25px;
+}
+
+.contact_container > p.role {
+    font-weight: bold;
+    margin: 0;
+}
+
+.contentList_contacts {
+    margin-left: 50px;
 }
 
 ////////////////////////////////////////////////
