--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -92,9 +92,9 @@
 /*TYPO*/
 h1{
     font-size:24px;
-    letter-spacing: 1rem;
-    margin-top: 7rem;
-    margin-bottom: 3rem;
+    letter-spacing: 2rem;
+    margin-top: 13rem;
+    margin-bottom: 10rem;
     color: #444;
 }
 @media screen and (min-width: @min_xs) and (max-width:@min_sm){h1{font-size: 32px}}
@@ -177,6 +177,7 @@ p.client_img_container > img {
 .contact_container {
     width: 200px;
     text-align: center;
+    margin: 0 4rem;
 }
 
 .contact_container > .photo {
@@ -189,7 +190,7 @@ p.client_img_container > img {
     overflow: hidden;
     border-radius: 100%;
     margin-bottom: 3rem;
-    margin-left: 25px;
+    margin-left: 10px;
 }
 
 .contact_container > p.role {
@@ -198,7 +199,9 @@ p.client_img_container > img {
 }
 
 .contentList_contacts {
-    margin-left: 50px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 ////////////////////////////////////////////////
