--- a/theme/9media/templates/blocks/contentList/LienVersPageTemplate.html
+++ b/theme/9media/templates/blocks/contentList/LienVersPageTemplate.html
@@ -1,6 +1,8 @@
 <div class="row">
-    <div class="col-xs-12 col-md-6 image_container" ng-class="{'pair': $even}" 
+    <div class="col-xs-12 col-md-6 image_container" 
+        ng-class="{'pair': $even}" 
         style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields.image, {width:'800px',mode:'boxed'})}}')"
+        ng-click="$location.path('https://www.google.fr');"
         ng-repeat="content in contentListCtrl.contents track by $index">
         <h2 class="img_title">
             <div>{{content.fields.text.split('§')[0].toUpperCase()}}</div>
