9media lien vers page

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -236,6 +236,7 @@ h2.img_title > div:nth-child(2) {
     background-size: cover;
     overflow: hidden;
     padding: 20px;
+    cursor: pointer;
 }
 
 @media screen and (min-width: @min_xs) {
