--- a/theme/9media/templates/blocks/contentList/LienVersPageTemplate.html
+++ b/theme/9media/templates/blocks/contentList/LienVersPageTemplate.html
@@ -2,14 +2,17 @@
     <div class="col-xs-12 col-md-6 image_container" 
         ng-class="{'pair': $even}" 
         style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields.image, {width:'800px',mode:'boxed'})}}')"
-        ng-repeat="content in contentListCtrl.contents track by $index"
-        ng-click="go(content.propositionReferencee)">
+        ng-click="go(content.propositionReferencee)"
+        ng-repeat="content in contentListCtrl.contents track by $index">
+
         <h2 class="img_title">
             <div>{{content.fields.text.split('§')[0].toUpperCase()}}</div>
             <div ng-if="content.fields.text.split('§').length > 1">{{content.fields.text.split('§')[1].toUpperCase()}}</div>
         </h2>
+        
         <p>
             {{content.fields.summary.toUpperCase()}}
         </p>
     </div>
+
 </div>
