9media added generic classes

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -85,6 +85,8 @@
 @gray:#777;
 @primary:#333;
 
+.mt-7{margin-top:7rem} .mt-8{margin-top:8rem} .mt-9{margin-top:9rem}
+
 ////////////////////////////////////////////////
     /////// GLOBAL ////////////////
 ////////////////////////////////////////////////
@@ -165,9 +167,9 @@ p.client_img_container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-}
-p.client_img_container > img {
-    margin: 0.5rem 1rem;
+    img {
+        margin: 0.5rem 1rem;
+    }
 }
 
 ////////////////////////////////////////////////
