--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -180,6 +180,9 @@ p.client_img_container {
     width: 200px;
     text-align: center;
     margin: 0 4rem;
+    p {
+        margin: 0;
+    }
 }
 
 .contact_container > .photo {
@@ -197,7 +200,6 @@ p.client_img_container {
 
 .contact_container > p.role {
     font-weight: bold;
-    margin: 0;
 }
 
 .contentList_contacts {
