--- a/theme/9media/templates/blocks/contentList/ContactTemplate.html
+++ b/theme/9media/templates/blocks/contentList/ContactTemplate.html
@@ -11,7 +11,7 @@
         </p>
 
         <p class="role">
-            {{content.fields.text.toUpperCase()}}
+            {{content.fields.text.toUpperCase()}} flagCode={{content.flagCode}}
         </p>
 
         <p class="xp">
