9media flag css

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -183,6 +183,10 @@ p.client_img_container {
     p {
         margin: 0;
     }
+    img.flag {
+        margin-top: -4rem;
+        margin-left: 9rem;
+    }
 }
 
 .contact_container > .photo {
@@ -194,7 +198,6 @@ p.client_img_container {
     background-size: cover;
     overflow: hidden;
     border-radius: 100%;
-    margin-bottom: 3rem;
     margin-left: 10px;
 }
 
