9media contactlist bootstrap pure

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -177,9 +177,9 @@ p.client_img_container {
 ////////////////////////////////////////////////
 
 .contact_container {
-    width: 200px;
+    /* width: 200px; */
     text-align: center;
-    margin: 0 4rem;
+    /* margin: 0 4rem; */
     p {
         margin: 0;
     }
@@ -198,7 +198,6 @@ p.client_img_container {
     background-size: cover;
     overflow: hidden;
     border-radius: 100%;
-    margin-left: 10px;
 }
 
 .contact_container > p.role {
