--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -200,7 +200,7 @@ p.client_img_container {
     border-radius: 100%;
 }
 
-.contact_container > p.role {
+.contact_container > div.role {
     font-weight: bold;
 }
 
