--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -177,9 +177,8 @@ p.client_img_container {
 ////////////////////////////////////////////////
 
 .contact_container {
-    /* width: 200px; */
     text-align: center;
-    /* margin: 0 4rem; */
+    margin-top: 5rem;
     p {
         margin: 0;
     }
@@ -205,9 +204,8 @@ p.client_img_container {
 }
 
 .contentList_contacts {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    width: 80vw;
+    margin-left: 10vw;
 }
 
 ////////////////////////////////////////////////
