--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -179,8 +179,9 @@ p.client_img_container {
 .contact_container {
     text-align: center;
     margin-top: 5rem;
-    p {
+    div {
         margin: 0;
+        letter-spacing: 2px;
     }
     img.flag {
         margin-top: -4rem;
@@ -204,6 +205,8 @@ p.client_img_container {
 }
 
 .contentList_contacts {
+    display: flex;
+    flex-wrap: wrap;
     width: 80vw;
     margin-left: 10vw;
 }
