--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -179,7 +179,7 @@ p.client_img_container {
 .contact_container {
     text-align: center;
     margin-top: 5rem;
-    div {
+    div.nom, div.role, div.xp {
         margin: 0;
         letter-spacing: 2px;
     }
