9media add general css classes

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -86,6 +86,8 @@
 @primary:#333;
 
 .mt-7{margin-top:7rem} .mt-8{margin-top:8rem} .mt-9{margin-top:9rem}
+.nomargin{margin:0}
+.nopadding{padding:0}
 
 ////////////////////////////////////////////////
     /////// GLOBAL ////////////////
