--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -159,6 +159,15 @@ html,body{
 	background: transparent !important;
 }
 
+////////////////////////////////////////////////
+/////// STYLES POUR LES ICÔNES 9MEDIA/Accueil //
+////////////////////////////////////////////////
+
+.expertise {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 
 ////////////////////////////////////////////////
 /////////// TEXTE RICHE CLIENTS  ///////////////
