9media notre expertise

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -166,6 +166,12 @@ html,body{
 .expertise {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: baseline;
+
+    div {
+        margin: 0 2rem;
+    }
 }
 
 
