--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -170,7 +170,7 @@ html,body{
 
 @media screen and (min-width: @min_md) and(max-width:@min_lg) {
     .expertise {
-        display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
         align-items: baseline;
