--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -168,7 +168,7 @@ html,body{
     flex-direction: column;
 }
 
-@media screen and (min-width: @min_md) and(max-width:@min_lg) {
+@media screen and (min-width: 1050px) {
     .expertise {
         flex-direction: row;
         flex-wrap: wrap;
