--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -166,6 +166,11 @@ html,body{
 .expertise {
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.expertise > div {
+    margin: 1rem 2rem;
 }
 
 @media screen and (min-width: 1050px) {
@@ -174,10 +179,6 @@ html,body{
         flex-wrap: wrap;
         justify-content: center;
         align-items: baseline;
-
-        div {
-            margin: 1rem 2rem;
-        }
     }
 }
 
