--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -173,6 +173,13 @@ html,body{
     margin: 1rem 2rem;
 }
 
+p.expertise_label {
+    text-align: center;
+    font-family: OswaldLight;
+    margin-top: -35px;
+    color: white;
+}
+
 @media screen and (min-width: 1050px) {
     .expertise {
         flex-direction: row;
