9media added css class bandeau

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -89,6 +89,8 @@
 .nomargin{margin:0}
 .nopadding{padding:0}
 
+.bandeau{width:100vw;margin:3rem 0;}
+
 ////////////////////////////////////////////////
     /////// GLOBAL ////////////////
 ////////////////////////////////////////////////
