--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -182,6 +182,12 @@ p.expertise_label {
     color: white;
 }
 
+.expertise > img:nth-child(2) {
+    width: 50px;
+    margin: auto;
+    margin-top: 3rem;
+}
+
 @media screen and (min-width: 1050px) {
     .expertise {
         flex-direction: row;
