--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -182,7 +182,7 @@ p.expertise_label {
     color: white;
 }
 
-.expertise > img:nth-child(2) {
+.expertise > img:nth-of-type(2) {
     width: 50px;
     margin: auto;
     margin-top: 3rem;
