--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -182,7 +182,7 @@ p.expertise_label {
     color: white;
 }
 
-p.expertise_label + img { /* the img placed immediately after p.expertise_label */
+img.expertise_icon {
     width: 50px;
     margin: auto;
     margin-top: 3rem;
