--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -171,6 +171,10 @@ html,body{
     align-items: center;
 }
 
+.epxertise img {
+    margin: auto;
+}
+
 .expertise > div {
     margin: 1rem 2rem;
 }
@@ -180,6 +184,20 @@ p.expertise_label {
     font-family: OswaldLight;
     margin-top: -35px;
     color: white;
+}
+
+p.expertise_label + p {
+    display: flex;
+    align-items: center;
+}
+
+p.expertise_label + p:after, p.expertise_label + p:before {
+    content: "";
+    display: inline-block;
+    border-top: 2px solid #9c9c9c;
+    width: 70px;
+    margin: 0 1rem;
+    transform: translateY(15px);
 }
 
 img.expertise_icon {
