--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -171,7 +171,7 @@ html,body{
     align-items: center;
 }
 
-.epxertise img {
+.expertise img {
     margin: auto;
 }
 
@@ -186,12 +186,12 @@ p.expertise_label {
     color: white;
 }
 
-p.expertise_label + p {
+p.expertise_icon {
     display: flex;
     align-items: center;
 }
 
-p.expertise_label + p:after, p.expertise_label + p:before {
+p.expertise_icon:after, p.expertise_icon:before {
     content: "";
     display: inline-block;
     border-top: 2px solid #9c9c9c;
