--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -187,6 +187,17 @@ ul.squareContainerFlex > li {
     max-height: 250px;
     font-size: 3rem;
     line-height: 3rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    ul {
+        list-style: none;
+        text-align: right;
+        font-size: 2rem;
+        line-height: 2.4rem;
+    }
 }
 
 @media screen and (min-width: @min_sm) and(max-width:@min_md) {
