--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -87,6 +87,7 @@
 @primary:#333;
 
 .mt-7{margin-top:7rem} .mt-8{margin-top:8rem} .mt-9{margin-top:9rem}
+.ml-7{margin-left:7rem}
 .nomargin{margin:0}
 .nopadding{padding:0}
 
@@ -142,6 +143,12 @@ html,body{
 .paddingv{padding-top:30px; padding-bottom:30px;}
 @media screen and (min-width: @min_sm) {
 		li:hover>.dropdown-menu{display: block}
+}
+
+p {
+    margin: 0 0 1.5rem;
+    font-size: 1rem;
+    margin-left: 10vw;
 }
 
 /*FIXES*/
