--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -87,7 +87,9 @@
 @primary:#333;
 
 .mt-7{margin-top:7rem} .mt-8{margin-top:8rem} .mt-9{margin-top:9rem}
-.ml-7{margin-left:7rem}
+.ml-7{margin-left:7rem} .ml-8{margin-left:7rem} .ml-9{margin-left:7rem}
+.fs-2{font-size:2rem} .fs-{font-size:3rem} .fs-4{font-size:4rem}
+
 .nomargin{margin:0}
 .nopadding{padding:0}
 
