--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -153,6 +153,12 @@ p {
     margin-left: 10vw;
 }
 
+@media screen and (min-width: @min_sm) {
+    p {
+        margin-left: 23vw;
+    }
+}
+
 /*FIXES*/
 .rubedo-block-contentContribution{min-height:0 !important}
 
