--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -147,14 +147,14 @@ html,body{
 		li:hover>.dropdown-menu{display: block}
 }
 
-p {
+.left_centered {
     margin: 0 0 1.5rem;
     font-size: 1rem;
     margin-left: 10vw;
 }
 
 @media screen and (min-width: @min_lg) {
-    p {
+    .left_centered {
         margin-left: 23vw;
     }
 }
