--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -356,6 +356,7 @@ p.client_img_container {
 h2.img_title {
     color: white;
     margin: 0.5rem;
+    text-shadow: #afafaf 0 1px 1px;
 }
 
 h2.img_title > div:nth-child(2) {
@@ -369,8 +370,9 @@ h2.img_title > div:nth-child(2) {
 }
 
 .image_container > p {
-    color: #ddd;
+    color: white;
     margin: 1rem 0.5rem;
+    text-shadow: #afafaf 0 1px 1px;
 }
 
 .image_container {
