bethanien added logo ccn

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -131,7 +131,7 @@ body{
     min-height:100%; 
     line-height: 1.4em 
 }
-html,body{
+html, body{
     font-family: 'OswaldLight','NexaLight', "Helvetica Neue",Helvetica,Arial,sans-serif; 
     height: 100%; 
     overflow: auto;
@@ -175,6 +175,18 @@ html,body{
 }
 .nav .open>a, .nav .open>a:hover, .nav .open>a:focus{
 	background: transparent !important;
+}
+
+.carousel {
+    text-shadow: #afafaf 0 1px 1px;
+}
+
+////////////////////////////////////////////////
+///////////////// FOOTER ///////////////////////
+////////////////////////////////////////////////
+
+.footer {
+    margin-top: 10rem;
 }
 
 
