--- a/theme/bethanien/templates/blocks/navigation.html
+++ b/theme/bethanien/templates/blocks/navigation.html
@@ -7,11 +7,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a scroll-position="scroll2" ng-if="blockConfig.displayRootPage && blockConfig.imageFile" class="navbar-brand " ng-href="{{menuCtrl.menu.url}}">
-                <img   ng-src="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{height:'60px',mode:'boxed'})}}" ng-if="rubedo.current.page.id!=blockConfig.rootPage || (rubedo.current.page.id==blockConfig.rootPage&&scroll2>=500)"/>
-                <img   ng-src="{{rubedo.imageUrl.getUrlByMediaId('5954bcb73965886261c47040' ,{height:'60px',mode:'boxed'})}}" ng-if="rubedo.current.page.id==blockConfig.rootPage&&scroll2<500"/>
-               <!-- -->
+            <a ng-if="blockConfig.imageFile" class="navbar-brand " ng-href="{{menuCtrl.menu.url}}">
+                <!-- Logo Bethanien -->
+                <img ng-src="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{height:'60px',mode:'boxed'})}}" />
             </a>
+            
+             <!-- Logo CCN -->
+            <a title="{{rubedo.translate('ccn','Communauté du Chemin Neuf')}}" ng-href="https://www.chemin-neuf.org/en/" ><img ng-src="{{rubedo.imageUrl.getUrlByMediaId('56abde8dc445eccc138b507e',{height:'60px',mode:'boxed'})}}"/></a>
         </div>
         <div class="container">
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -29,11 +31,10 @@
                             </li>
                         </ul>
                     </li>
-                    <!-- Partie choix de la langue -->
                     <li ng-controller="LanguageMenuController as languageMenuCtrl" class="languageMenu">
                         <a  class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{languageMenuCtrl.currentLang.lang |uppercase}} <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="lang in languageMenuCtrl.languages track by $index" > <!--ng-if="(lang.lang !='de' ) || rubedo.current.user"-->
+                            <li ng-repeat="lang in languageMenuCtrl.languages track by $index" > 
                                 <a ng-click="languageMenuCtrl.changeLang(lang.lang)" href>
                                     <i ng-if="languageMenuCtrl.showFlags"><img ng-src="{{languageMenuCtrl.getFlagUrl(lang.flagCode)}}" alt="{{lang.flagCode}}"/></i>
                                     {{lang.lang |uppercase}}
@@ -43,16 +44,12 @@
                     </li>
                 </ul>
 
-                <!-- Logo CCN -->
-                <img ng-src="{{rubedo.imageUrl.getUrlByMediaId('5954bcb73965886261c47040' ,{height:'60px',mode:'boxed'})}}" ng-if="rubedo.current.page.id==blockConfig.rootPage&&scroll2<500"/>
-
                 <ul class="nav navbar-nav navbar-right">
                     <form class="navbar-form" ng-if="menuCtrl.searchEnabled" ng-submit="menuCtrl.onSubmit()" role="form">
                         <div class="input-group">
                             <input class="form-control" type="text" ng-model="menuCtrl.query" ng-attr-placeholder="{{rubedo.translate('Search.Label.Search','Search')}}"/>
                                 <span class="input-group-btn"><button class="btn btn-default" type="submit">
-                                    <span class="glyphicon glyphicon-search"></span></button>
-                                </span>
+                                    <span class="glyphicon glyphicon-search"></span></button></span>
                         </div>
                     </form>
                 </ul>
